--- a/j20210502_1/WebContent/css/style.css
+++ b/j20210502_1/WebContent/css/style.css
@@ -32,6 +32,11 @@ body {
 	border-radius: 5px;
 }
 
+#cF {
+	width: 33%;
+	float: right;
+}
+
 #camp_Id {
 	margin: 10px 0px 10px 20px;
 	float: left;
@@ -52,36 +57,19 @@ body {
 	border-radius: 10px;
 }
 
-#camp_Rating {
-	margin: 20px 0px 0px 20px;
-	padding: 0px;
-}
-
-#camp_Rating li {
-	display: inline;
-	margin-left: 10px;
-	font-weight: bold;
-	background: #F7F7F7;
-	border: 1px solid #ababab;
-	color: #5E5E5E;
-	border-radius: 5px;
-}
-
 #camp_Images {
 	float: left;
-	width: 300px;
-	height: 250px;
-	margin: 20px 0px 20px 20px;
+	width: 30%;
+	height: 300px;
+	margin: 26px 0px 20px 20px;
 	overflow: hidden;
 }
 
 #camp_Images img {
 	display: block;
-	width: 300px;
-	height: 250px;
-	border-radius: 10px;
+	width: 100%;
+	height: 300px;
 	overflow: hidden;
-	border: 1px solid #DBDBDB;
 }
 
 hr {
@@ -110,9 +98,9 @@ hr {
 	margin: 15px 5px 15px 5px;
 	color: #5E5E5E;
 }
-#button{
+
+#button {
 	border: 1px solid gray;
-	background-color: gray; 
+	background-color: gray;
 	margin-left: 1.2%;
-	
 }
