--- a/j20210502_1/WebContent/css/style2.css
+++ b/j20210502_1/WebContent/css/style2.css
@@ -15,29 +15,26 @@
 
 #header {
 	width: 100%;
-	height: 250px;
-	border: 2px solid black;
+	height: 200px;
 	border-radius: 5px;
-	margin: 10px 0px 20px 0px;
 }
 
 #header img {
 	width: 100%;
-	height: 250px;
+	height: 200px;
 }
 
 .box2 {
 	grid-column-start: 2;
 	grid-column-end: 19;
 	grid-row-start: 2;
-	grid-row-end: 3;
+	grid-row-end: 4;
 }
 
 .box2 img {
 	width: 100%;
 	height: 450px;
-	border-radius: 10px;
-	margin-top: 20px;
+	margin-top: 100px;
 }
 
 .box3 {
@@ -50,7 +47,8 @@
 .box3 table {
 	width: 80%;
 	height: 400px;
-	margin: 20px 20px 0px 50px;
+	margin-top: 100px;
+	margin-left: 10%;
 }
 
 #th {
@@ -82,64 +80,54 @@
 }
 
 .box3 div {
-	width: 100%;
+	width: 90%;
 	height: 60.05px;
 }
 
-.button1 {
-	width: 100%;
-}
-
-.button1 ul {
-	list-style: none;
-	width: 100%;
-}
-
-.button1 ul li {
-	float: left;
-	font-size: 20px;
-	border: 3px solid gray;
-	background-color: gray;
-	width: 80%;
-	margin-left: 1.3%;
-	margin-top: 0.2%;
-	text-align: center;
-}
-
-.button1 ul li:hover {
-	background-color: gray;
-	border: 1px solid gray;
-}
-
 .box4 {
-	grid-column-start: 1;
+	grid-column-start: 20;
 	grid-column-end: 30;
 	grid-row-start: 3;
 	grid-row-end: 4;
 }
 
-.box4 div {
-	display: inline-block;
+.res {
 	width: 100%;
-	margin: 50px 0px 0px 0px;
+	height: 100%;
+	border: 1px solid black;
+	text-align: center;
+	border: 1px solid black;
+	border: 1px solid black;
+}
+
+.box5 {
+	grid-column-start: 1;
+	grid-column-end: 31;
+	grid-row-start: 4;
+	grid-row-end: 5;
 }
 
 .button2 {
 	width: 100%;
+	height: 100%;
+	border: 1px solid blue;
 }
 
 .button2 ul {
 	list-style: none;
-	width: 100%;
+	width: 80%;
+	margin-top: 6%;
+	margin-left: 9.5%;
 }
 
 .button2 ul li {
 	float: left;
 	font-size: 20px;
-	border-bottom: 3px solid gray;
+	border: 3px solid gray;
+	background-color: gray;
 	width: 30%;
-	margin: 0px 5px 0px 0px;
 	text-align: center;
+	margin-left: 1px;
 }
 
 .button2 ul li:hover {
@@ -147,11 +135,11 @@
 	border: 1px solid gray;
 }
 
-.box5 {
+.box6 {
 	grid-column-start: 1;
-	grid-column-end: 30;
-	grid-row-start: 4;
-	grid-row-end: 5;
+	grid-column-end: 31;
+	grid-row-start: 5;
+	grid-row-end: 6;
 }
 
 .color:visited {
