--- a/j20210502_1/WebContent/css/style2.css
+++ b/j20210502_1/WebContent/css/style2.css
@@ -107,32 +107,9 @@
 	grid-row-end: 5;
 }
 
-.button2 {
+.one {
 	width: 100%;
-	height: 100%;
-	border: 1px solid blue;
-}
-
-.button2 ul {
-	list-style: none;
-	width: 80%;
-	margin-top: 6%;
-	margin-left: 9.5%;
-}
-
-.button2 ul li {
-	float: left;
-	font-size: 20px;
-	border: 3px solid gray;
-	background-color: gray;
-	width: 30%;
-	text-align: center;
-	margin-left: 1px;
-}
-
-.button2 ul li:hover {
-	background-color: gray;
-	border: 1px solid gray;
+	height: 90px;
 }
 
 .box6 {
@@ -142,14 +119,9 @@
 	grid-row-end: 6;
 }
 
-.color:visited {
-	color: black;
-}
-
-.color:hover {
-	color: black;
-}
-
-.color {
-	text-decoration: none;
+.box7 {
+	grid-column-start: 1;
+	grid-column-end: 31;
+	grid-row-start: 6;
+	grid-row-end: 7;
 }
