--- a/j20210502_1/WebContent/css/style.css
+++ b/j20210502_1/WebContent/css/style.css
@@ -15,30 +15,14 @@ body {
 	border-radius: 10px;
 }
 
-#nav_Menu {
-	width: 220px;
-	margin: 20px 0px 0px 0px;
-	float: right;
-	padding-left: 0px;
-}
-
-#nav_Menu li {
-	display: inline;
-	margin-right: 5px;
-	font-weight: bold;
-	background: #f7f7f7;
-	border: 1px solid #ABABAB;
-	color: #5e5e5e;
-	border-radius: 5px;
-}
-
 #cF {
 	width: 33%;
+	margin-top: 17px;
 	float: right;
 }
 
 #camp_Id {
-	margin: 10px 0px 10px 20px;
+	margin: 15px 0px 10px 20px;
 	float: left;
 	overflow: hidden;
 	display: -webkit-box;
@@ -49,7 +33,7 @@ body {
 #article {
 	display: block;
 	max-width: 100%;
-	height: 350px;
+	height: 100%;
 	margin: 5px 15px;
 	border: 1px solid #DBDBDB;
 	background-color: #F8FCFE;
@@ -107,4 +91,13 @@ hr {
 
 .notice {
 	margin-top: 5%;
+}
+
+.images2 {
+	float: left;
+	border: 1px solid black;
+	width: 30%;
+	height: 30%;
+	margin-left: 5%;
+	margin-bottom: 1%;
 }
