--- a/j20210502_1/WebContent/css/style.css
+++ b/j20210502_1/WebContent/css/style.css
@@ -98,6 +98,6 @@ hr {
 	border: 1px solid black;
 	width: 30%;
 	height: 30%;
-	margin-left: 5%;
-	margin-bottom: 1%;
+	margin-left: 1%;
+	margin-top: 1%;
 }
