--- a/j20210502_1/WebContent/css/style2.css
+++ b/j20210502_1/WebContent/css/style2.css
@@ -23,7 +23,7 @@
 .box2 img {
 	width: 100%;
 	height: 450px;
-	margin-top: 70px;
+	/* 	margin-top: 70px; */
 }
 
 .box3 {
@@ -135,7 +135,7 @@ box6 div {
 	float: left;
 	border: 1px solid black;
 	width: 40%;
-	height: 130px;
+	height: 90px;
 	margin: 2% 1.56% 5% 1.56%;
 }
 
@@ -148,4 +148,8 @@ box6 div {
 
 .notice {
 	margin-top: 5%;
+}
+
+.desc {
+	margin-left: 1%;
 }
