--- a/j20210502_1/WebContent/css/userJoin.css
+++ b/j20210502_1/WebContent/css/userJoin.css
@@ -1,9 +1,11 @@
 @charset "utf-8";
 
-* {
+*{
 	margin: 0;
 	padding: 0;
+	font-family: 'Roboto Condensed';
 }
+
 
 html {
 	height: 100%;
@@ -16,7 +18,7 @@ body {
 
 table, tr, td, th, div, p, em, ol, ul, li, dl, dt, dd, a, address, img,
 	h1, h2, h3, h4, h5, h6 {
-	font-size: 11pt;
+	font-size: 13pt;
 	color: #666;
 	text-decoration: none;
 }
@@ -93,7 +95,7 @@ ul {
 .con_term .term_txt ul li, .con_term .term_txt p, .con_term .term_txt div
 	{
 	color: #818181;
-	font-size: 12px;
+	font-size: 13px;
 	line-height: 17px;
 	margin: 0 0 15px;
 }
